fixed issue 'UI for friends page is wonky'(columns are now aligned, users are always brown not blue, if post content overflows, ellipsis will be shown)

--- a/dogenode/static/css/base.css
+++ b/dogenode/static/css/base.css
@@ -154,7 +154,6 @@ div.content header h1 {
     clear: right;
 }
 
-
 textarea {
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
@@ -224,23 +223,29 @@ div.search-box input:focus {
 }
 
 /* *** Tables *** */
-.table {
+table {
     background-color: #FAFBD2;
     width: 100%;
     height: 100%;
+    table-layout: fixed;
+}
+
+table td {
+    overflow: hidden;
+    text-overflow: ellipsis; 
 }
 
 /* Overridding Bootstraps' CSS: division between head and body  */
-.table > thead > tr > th {
+table > thead > tr > th {
     border-bottom: 2px solid #855A14; /* Faded Brown */
 }
 
 /* Table Links  */
-.table tbody tr td a {
+table a {
     color: rgb(165, 116, 38); /* faded med-dark orange brown */
 }
 
-.table tbody tr td a:hover {
+table a:hover, table a:visited {
     color: rgb(205, 151, 63); /* medium orange brown */
     text-decoration:none;
 }
